src/objects/Sales_Order_Line__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <description>This field stores account id from opportunity and this field will refer from sales order line item</description>
        <formula>Sales_Order__r.Opportunity__r.AccountId</formula>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Shipping_Date__c</fullName>
        <description>Actual Shipping Date</description>
        <label>Actual Shipping Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attached_to_Sales_Line__c</fullName>
        <description>The Item that this SLA is associated with.</description>
        <label>Attached to Sales Line</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Order_Line_Id__c</fullName>
        <label>B2B Order Line Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>B2B Order Line</label>
        <referenceTo>B2B_Order_Line__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOM_Level__c</fullName>
        <label>BOM Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOM_Line_Number__c</fullName>
        <label>BOM Line Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Total Discount % from Quote Line</description>
        <formula>Quote_Line__r.Calculated_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eval_Conversion_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Eval Conversion update was received from Navision on a Sales Order Line Record.</description>
        <label>Eval Conversion Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <description>Product Code from Product</description>
        <formula>Product__r.ProductCode</formula>
        <label>Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price_BOM__c</fullName>
        <formula>Quote_Line__r.BOM_Package_Regular_Total__c /  Quote_Line__r.SBQQ__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <description>List Unit Price from Quote Line</description>
        <formula>Quote_Line__r.SBQQ__ListPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Package_Product_Code__c</fullName>
        <label>Package Product Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Line_Number__c</fullName>
        <label>Purchase Order Line Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Id__c</fullName>
        <formula>Quote_Line__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Line Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Last_Submission_DateTime__c</fullName>
        <formula>Sales_Order__r.Last_Submission_DateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SO Last Submission DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SO_Status__c</fullName>
        <formula>Text(Sales_Order__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SO Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Type__c</fullName>
        <formula>TEXT(Sales_Order__r.Type__c)</formula>
        <label>SO Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Price_BOM__c</fullName>
        <formula>Quote_Line__r.BOM_Package_Net_Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sale_Price_Total__c</fullName>
        <formula>Quote_Line__r.BOM_Package_Net_Unit_Price__c * Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale Price Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sale_Price__c</fullName>
        <label>Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <label>Sales Order</label>
        <referenceTo>Sales_Order__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Agent_Link__c</fullName>
        <description>Shipping Agent Link for the Sales Order Line Record</description>
        <label>Shipping Agent Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Shipping_Agent__c</fullName>
        <description>Shipping Agent for the Sales Order Line Record</description>
        <label>Shipping Agent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Email_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Shipping Email was sent on a Sales Order Line Record.</description>
        <label>Shipping Email Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submission_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to trigger interface workflow rule outbound messaging to Informatica</description>
        <label>Submission Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_Term__c</fullName>
        <label>Subscription Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_Renewal_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support Renewal Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Quantity__c *  Sale_Price_BOM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <description>Tracking Number for Sales Order Line Record</description>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sales Order Line</label>
    <nameField>
        <displayFormat>SOLI-{000000}</displayFormat>
        <label>Sales Order Line #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>